--- a/logo/style.css
+++ b/logo/style.css
@@ -1,6 +1,7 @@
 body {
   overflow: hidden;
-  background: radial-gradient(ellipse at center, #000 0%, #100b0d 99%);
+  /* background: radial-gradient(ellipse at center, #000 0%, #100b0d 99%); */
+  background-color: rgba(0, 0, 0, 0);
 }
 img {
   display: none;
